--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     </title>
     <style>
       p.special {
-        color: orange;
+        color: purple;
         text-align: center;
-        font-family: Sans-Serif;
+        font-family: williams;
       }
     </style>
   </head>
   <body>
-    <h1>This is a header</h1>
-    <h2>This is a smaller header</h2>
-    <h3>Even smaller</h3>
-    <h4>Even smaller!</h4>
+    <h1>My name is shanya</h1>
+    <h2>I play sports</h2>
+    <h3>Not soccer or softballr</h3>
+    <h4>they suck!</h4>
     <p>This is a paragraph. With some <b>bold</b> text and <i>italicized</i> text.</p>
     <p>This is how you can link to pages like <a href="http://www.google.com">Google</a>.</p>
     <p class="special">This is a paragraph with style.</p>
