--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     </title>
     <style>
       p.special {
-        color: purple;
+        color:purple;
         text-align: center;
         font-family: williams;
+        background-color: black;
       }
     </style>
   </head>
   <body>
-    <h1>My name is shanya</h1>
-    <h2>I play sports</h2>
-    <h3>Not soccer or softballr</h3>
-    <h4>they suck!</h4>
-    <p>This is a paragraph. With some <b>bold</b> text and <i>italicized</i> text.</p>
-    <p>This is how you can link to pages like <a href="http://www.google.com">Google</a>.</p>
+    <h1>I went to go get some applejuice</h1>
+    <h2>I wanted some applejuice</h2>
+    <h3>but I didn't have any money</h3>
+    <h4>freak life!I really wanted some applejuice</h4>
+    <p>The story of my life isn't it sad</p>
+    <p>it wouldn't be like this if I had applejuice </p>
     <p class="special">This is a paragraph with style.</p>
   </body>
 </html>
