--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <h1>I went to go get some applejuice</h1>
     <h2>I wanted some applejuice</h2>
-    <h3>but I didn't have any money</h3>
-    <h4>freak life!I really wanted some applejuice</h4>
-    <p>The story of my life isn't it sad</p>
-    <p>it wouldn't be like this if I had applejuice </p>
+    <h2>but I didn't have any money</h2>
+    <h2>FREAK LIFE!I really wanted some applejuice</h2>
+    <p>The story of my life, isn't it sad</p>
+    <p>It wouldn't be like this if I had applejuice </p>
     <p class="special">This is a paragraph with style.</p>
   </body>
 </html>
