--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>
-      My first web page
+      My very sad story
     </title>
     <style>
       p.special {
-        color:purple;
+        color:black;
         text-align: center;
         font-family: williams;
         background-color: black;
