--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     </title>
     <style>
       p.special {
-        color:black;
+        color:turquoise;
         text-align: center;
         font-family: williams;
-        background-color: black;
+        body{
+          background-color: black;
       }
     </style>
   </head>
@@ -17,8 +18,8 @@
     <h2>I wanted some applejuice</h2>
     <h2>but I didn't have any money</h2>
     <h2>FREAK LIFE!I really wanted some applejuice</h2>
-    <p>The story of my life, isn't it sad</p>
+    <p><bold></bold>The story of my life, isn't it sad</bold></p>
     <p>It wouldn't be like this if I had applejuice </p>
-    <p class="special">This is a paragraph with style.</p>
+    <p class="special">Only if I had it my way, I'd have all the applejuice in the world</p>
   </body>
 </html>
