--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </title>
     <style>
       p.special {
-        color:turquoise;
+        color:green;
         text-align: center;
         font-family: williams;
         body{
