--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
     </style>
   </head>
-  <p class="special"><body></p class="></body>
+ <body>
     <h1>I went to go get some applejuice</h1>
     <h2>I wanted some applejuice</h2>
     <h2>but I didn't have any money</h2>
