--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       My very sad story
     </title>
     <style>
-      p.special {
+      p.body {
         color:green;
         text-align: center;
         font-family: williams;
@@ -20,6 +20,6 @@
     <h2>FREAK LIFE!I really wanted some applejuice</h2>
     <p><bold></bold>The story of my life, isn't it sad</bold></p>
     <p>It wouldn't be like this if I had applejuice </p>
-    <p class="special">Only if I had it my way, I'd have all the applejuice in the world</p>
+    <p class="body">Only if I had it my way, I'd have all the applejuice in the world</p>
   </body>
 </html>
