--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>I went to go get some applejuice</h1>
     <h2>I wanted some applejuice</h2>
     <h2>but I didn't have any money</h2>
-    <h2><marquee></marquee>FREAK LIFE!I really wanted some applejuice</marquee></h2>
+    <h2><marquee>FREAK LIFE!I really wanted some applejuice</marquee></h2>
     <p><bold></bold>The story of my life, isn't it sad</bold></p>
     <p>It wouldn't be like this if I had applejuice </p>
     <p class="body">Only if I had it my way, I'd have all the applejuice in the world</p>
