--- a/DACAinteractive.html
+++ b/DACAinteractive.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="DACAinteractive.css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<title>
 			DACA Interactive
 		</title>
@@ -15,56 +16,63 @@
 		 </style>
 	</head>
 	
-<body class="container-fluid>
+<body class="container-fluid" style="font-family: 'Oswald', sans-serif;">
 		<div class="row">
 			<div class="col-12 col-sm-12 title" id="daca">
 				<h2> The Cost of Being Undocumented</h2>
 			</div>
 		</div>
-			<div class="slideshow-container row3">
 
-			<div class="mySlides fade">
-					  <div class="numbertext">1 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/DACA_rally_SF_20170905-8471.jpg" style="width:900px">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">2 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/DACA_protest_Columbus_Circle_%2890008%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">3 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/DACA_protest_Columbus_Circle_%2890537%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">4 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/DACA_protest_Columbus_Circle_%2890598%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">5 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/DACA_protest_Columbus_Circle_%2890537%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">6 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/e/eb/DACA_protest_Columbus_Circle_%2890036%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">7 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Defend_DACA_%2836258475934%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">8 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/DACA_protest_at_Trump_Tower_%2852703%29.jpg/1280px-DACA_protest_at_Trump_Tower_%2852703%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">9 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/0/07/DACA_protest_Columbus_Circle_%2890442%29.jpg" style="width:100%">
-					</div>
-					<div class="mySlides fade">
-					  <div class="numbertext">10 / 10</div>
-					  <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/DACA_protest_Columbus_Circle_%2892918%29.jpg" style="width:100%">
-					</div>
+		<div class="row">
+			<div class="col-12 col-sm-12">
+			<div class="slideshow-container text-center">
+				<div class="mySlides fade ">
+							 <div class="numbertext outofeleven">1 / 11</div>
+							  	<img src="new/daca1.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 2 / 11</div>
+							  <img src="new/daca2.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 3 / 11</div>
+							  	<img src="new/daca3.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 4 / 11</div>
+							  	<img src="new/daca4.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 5 / 11</div>
+							  	<img src="new/daca5.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 6 / 11</div>
+							  	<img src="new/daca6.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 7 / 11</div>
+							  	<img src="new/daca7.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 8 / 11</div>
+							  	<img src="new/daca8.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 9 / 11</div>
+							  	<img src="new/daca9.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 10 / 11</div>
+							  	<img src="new/daca10.png" class="img-fluid">
+							</div>
+							<div class="mySlides fade">
+							  <div class="numbertext outofeleven"> 11 / 11</div>
+							  	<img src="new/daca11.png" class="img-fluid">
+							</div>
+				</div>
 			</div>
-		</div>
+			</div>
 <br>
 		<div class="row">
 			<div class="col-1 col-sm-1">
@@ -74,14 +82,14 @@
 					What is DACA?
 				</div>
 			<p> 
-				DACA stand for Deferred Action for Childhood Arrivals. DACA gives undocumented immigrants to get social security card which would allows them to get a driver's license, jobs and live normal lives without having to be worry about people coming and deporting them.
+				DACA stand for Deferred Action for Childhood Arrivals. DACA gives undocumented immigrants the opportunity to get  a social security card which would allows them to get driver's licenses, jobs and live normal lives without having to be worry about people coming and deporting them.
 			</p>
-			<div class="question">
+			<div>
 				Why is DACA important? 
 			</div> 
 			<p>
 				Why should we care?
-				People who are and are not Dreamers should care that president Trump is getting rid of DACA because without DACA, a lot of the American community that is filled with Dreamers who occupy important jobs and not only help with economic growth but also a part of school communities and friend communities will be deported. Also, dreamers did not come to America on their own terms. Their parents brought them here. It is wrong for dreamers to get deported because they grew up in America and know American culture.
+				People who are and are not Dreamers should care that president Trump is getting rid of DACA because without DACA, a lot of the American community that is filled with Dreamers, who occupy important jobs and not only help with economic growth but also a part of school communities and friend communities will be deported. Also, dreamers did not come to America on their own terms. Their parents brought them here. It is wrong for dreamers to get deported because they grew up in America and know only American culture.
 			</p>
 
 			</div>
@@ -89,7 +97,7 @@
 <br>
 		<div class=" row title">
 				<h1 class="col-12">
-					Subtitle
+					DACA Statistics
 				</h1>
 			</div>
 		</div>
@@ -98,7 +106,7 @@
 			<div class="col-1 col-sm-1">	
 			</div>
 			<div class="col-12 col-sm-10">
-				This graph shows the number of people who have lost DACA, people who will lose it, and the number of people who re-applied and are waiting to see if they’re application will be approved. 
+				This graph shows the <span id="have"> number of people who have lost DACA, </span>  <span id="lost"> people who will lose it,</span> and the <span id="other"> number of people who re-applied and are waiting to see if they’re application will be approved.</span> 
 
 			</div>
 			</div>
@@ -137,7 +145,7 @@
 			<div class="col-2 col-sm-2">
 			</div>
 			<div class="col-12 col-sm-8" id="button">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod finibus erat, non accumsan lectus ultricies nec. Ut gravida aliquet magna, nec ullamcorper purus mattis eget. Duis sit amet arcu interdum, iaculis ipsum non, tempus magna. Mauris eros erat, suscipit vitae massa nec, porta ornare lorem. Pellentesque vehicula dui non aliquet facilisis. Praesent malesuada nibh arcu,
+				We have found statistics based on everyday actions and things that affect everyday people as a way of making these numbers more relatable. The meaning of this is to help with comparing the numbers and to see the severity of what Trump is doing.
 			</div>
 			<div class="col-2 col-sm-2">
 			</div>
@@ -147,20 +155,30 @@
 			<div class="col-12 col-sm-2">
 			</div>
 			<div class="col-12 col-sm-2 my-2">
-				<button type="button" class="btn year" onclick="myfunction()"> Today </button>
+				<button type="button" class="btn year" onclick="todayfunction()"> Today </button>
 			</div>
 			<div class="col-12 col-sm-2 my-2" id="year">
-				<button type="button" class="btn year" onclick="orangefunction()"> 2017 </button>
+				<button type="button" class="btn year" onclick="seventeenfunction()"> 2017 </button>
 			</div>
 			<div class="col-12 col-sm-2 my-2">
-				<button type="button" class="btn year" onclick="greenfunction()"> 2018 </button>
+				<button type="button" class="btn year" onclick="eightteenfunction()"> 2018 </button>
 			</div>
 			<div class="col-12 col-sm-2 my-2">
-				<button type="button" class="btn year" onclick="bluefunction()"> 2019 </button>
+				<button type="button" class="btn year" onclick="nineteenfunction()"> 2019 </button>
 			</div>
 			<div class="col-12">
 			</div>
 		</div>
+<br>
+	<div id="names">
+		Shanya Williams, Valencia White, Austin Lai
+	</div>
+
+
+
+
+
+
 <script type="text/javascript">
 	var circle = document.getElementById("circle-ref");
 	var chartbox = document.getElementById("chart");
