--- a/DACAinteractive.html
+++ b/DACAinteractive.html
@@ -19,7 +19,7 @@
 <body class="container-fluid" style="font-family: 'Oswald', sans-serif;">
 		<div class="row">
 			<div class="col-12 col-sm-12 title" id="daca">
-				<h2> The Cost of Being Undocumented</h2>
+				<h1> The Cost of Being Undocumented</h1>
 			</div>
 		</div>
 
@@ -88,8 +88,7 @@
 				Why is DACA important? 
 			</div> 
 			<p>
-				Why should we care?
-				People who are and are not Dreamers should care that president Trump is getting rid of DACA because without DACA, a lot of the American community that is filled with Dreamers, who occupy important jobs and not only help with economic growth but also a part of school communities and friend communities will be deported. Also, dreamers did not come to America on their own terms. Their parents brought them here. It is wrong for dreamers to get deported because they grew up in America and know only American culture.
+				DACA recipients are known as “Dreamers.” But even people who aren’t themselves Dreamers should care that earlier this fall, the Trump Administration announced it would end DACA, giving congress until March to find an alternative. Dreamers occupy important jobs, help with economic growth, and are a part of school and friend communities that would lose them, if they were deported. Also, Dreamers came to America as children. Their parents brought them here. They grew up in America, and for many of them, American culture is the only one they know.
 			</p>
 
 			</div>
@@ -113,8 +112,8 @@
 		</div>
 <br>
 		<div>
-			<h1 class="title">
-				2017
+			<h1 class="title" id="subtitle">
+				Today
 			</h1>
 		</div>
 		<div class="row">
@@ -171,7 +170,7 @@
 		</div>
 <br>
 	<div id="names">
-		Shanya Williams, Valencia White, Austin Lai
+		<h4> Shanya Williams, Valencia White, Austin Lai</h4>
 	</div>
 
 
