--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					
 				</div>
 				<div class="col-2 div">
-					At the end of each summer, Girls Inc gathers all the girls to celebrate their completion of their first summer in a higher stage then the last.  There is food and also little projects we worked on during the summer with slide shows. This is overall the happiest time of the whole summer becuase this is the day where we get out stipens for our hard work.
+					At the end of each summer, Girls Inc gathers all the girls to celebrate their completion of their first summer in a higher stage than the last.  There is food and also little projects we worked on during the summer with slide shows. This is overall the happiest time of the whole summer becuase this is the day we get our stipens for our hard work.
 				</div>
 				<div class="col-1">
 					
